# mixmatch

./: .gitignore  .gitreview  .zuul.yaml  CONTRIBUTING.rst  Dockerfile  HACKING.rst  README.md  README.rst  federation_mapping.json  lower-constraints.txt  requirements.txt  run_proxy.sh  setup.cfg  test-requirements.txt  tox.ini
devstack/: ci.sh  keystone.sh  mixmatch.sh  plugin.sh  settings
devstack/files/: mapping.json
doc/: Makefile
doc/source/: architecture.rst  conf.py  identity.rst  index.rst  installation.rst  network-fed.rst  reference.rst  specs.rst  usage.rst  volumes.rst
etc/: api-paste.ini  k2k-proxy.conf  mixmatch.conf.sample
httpd/: apache.conf  k2k-proxy.wsgi  mixmatch-uwsgi.conf  mixmatch-uwsgi.ini  mixmatch.ini
mixmatch/: __init__.py  api.py  auth.py  cli.py  config.py  listener.py  log.txt  main.py  model.py  proxy.py  services.py  session.py  utils.py  wsgi.py
mixmatch/auth/: __init__.py  base.py  keystone.py
mixmatch/config/: __init__.py  auth.py  cache.py  default.py  log_image.py  log_network.py  log_volume.py  service_providers.py
mixmatch/extend/: __init__.py  base.py  name_routing.py  networks_extended.py  rule_engine_poc.py
mixmatch/tests/functional/: tempest_blacklist.txt
mixmatch/tests/tempest/: base.py
mixmatch/tests/unit/: base.py  json_samples.py  samples.py  test_extend.py  test_images.py  test_listener.py  test_mocked.py  test_request_details.py  test_request_handler.py  test_services.py  test_trim_endpoint.py  test_utils.py  (+1 more)
mixmatch_tempest_plugin/: README.rst  plugin.py
mixmatch_tempest_plugin/services/: mixmatch_clients.py
releasenotes/source/: conf.py  index.rst
specs/: template.rst
(+32 files in other folders)
