[metadata]
name = mixmatch
summary = Combine resources across federated OpenStack deployments
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://www.openstack.org/
classifier =
    Development Status :: 4 - Beta
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[global]
setup_hooks =
    pbr.hooks.setup_hook

[files]
packages =
    mixmatch
data_files =
    /etc/mixmatch = etc/*

[entry_points]
wsgi_scripts =
    mixmatch = mixmatch.wsgi:get_application

oslo.config.opts =
    mixmatch = mixmatch.config:list_opts

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = mixmatch/locale
domain = mixmatch

[update_catalog]
domain = mixmatch
output_dir = mixmatch/locale
input_file = mixmatch/locale/mixmatch.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = mixmatch/locale/mixmatch.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source
